# LCE-Emerald-Launcher

./: .SRCINFO  .gitignore  BUILD.md  CONTRIBUTING.md  LEONARDO.md  LICENSE  PKGBUILD  README.md  changes.patch  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: nightly.yml  publish.yml
flatpak/: io.github.Emerald_Legacy_Launcher.Emerald_Legacy_Launcher.desktop  io.github.Emerald_Legacy_Launcher.Emerald_Legacy_Launcher.metainfo.xml  io.github.Emerald_Legacy_Launcher.Emerald_Legacy_Launcher.yml  io.github.LCE_Emerald_Launcher.LCE_Emerald_Launcher.desktop  io.github.LCE_Emerald_Launcher.LCE_Emerald_Launcher.metainfo.xml  io.github.LCE_Emerald_Launcher.LCE_Emerald_Launcher.yml
scripts/: fix-macos-quarantine.sh  postinstall.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/DLC/Emerald Skin Pack/: Skins1.pck
src-tauri/scripts/: post-build-macos.sh
src-tauri/src/: lib.rs  main.rs
src/components/: Icons.tsx
src/components/common/: AchievementToast.tsx  ClickParticles.tsx  PanoramaBackground.tsx  SkinViewer.tsx
src/components/layout/: AppHeader.tsx  Sidebar.tsx  (+1 more)
src/context/: LauncherContext.tsx
src/css/: index.css
src/hooks/: useAppConfig.ts  useAudio.ts  useAudioController.ts  useDiscordRPC.ts  useGameInstances.ts  useGameManager.ts  useGamepad.ts  useLauncher.ts  useSettings.ts  useSkinSync.ts  useUpdateCheck.ts
src/pages/: App.tsx
src/services/: ArcService.ts  RPC.ts  RpcService.ts  TauriService.ts  tauri.ts  versions.ts
src/types/: arc.ts  index.ts
(+13 files in other folders)
