[package]
name = "emerald-legacy-launcher"
version = "0.3.0"
description = "FOSS cross-platform launcher for Minecraft Legacy Console Edition"
authors = ["Emerald Team"]
edition = "2021"

[lib]
name = "emerald_legacy_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-gamepad = "0.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-util = { version = "0.7.18", features = ["rt"] }
base64 = "0.21"
